@@ -31,6 +31,8 @@ The URL for your bug reporting system (defaults to http://bugzilla.redhat.com)\&
 The number of discs you want to create (defaults to 1)\&.
 .IP "\fB\-\-nosource\fP"
 Disable gathering of source packages (optional)\&.
+.IP "\fB\-\-nosplitmedia\fP"
+Disable creation of split media (optional)\&.
 .IP "\fB\-\-sourceisos\fP"
 Create the source media images (other arch runs must be done)\&.
 .IP "\fB\-c ksfile, \-\-config=ksfile\fP"
@@ -43,10 +45,6 @@ Enable the Gather stage\&.
 Enable the Createrepo stage\&.
 .IP "\fB\-B\fP"
 Enable the BuildInstall stage\&.
-.IP "\fB\-P\fP"
-Enable the Package Order stage\&.
-.IP "\fB\-S\fP"
-Enable the SplitTree stage\&.
 .IP "\fB\-I\fP"
 Enable the CreateISO stage\&.
 
