@@ -348,7 +348,7 @@ cost=500
         repofile.close()
 
     def doCreateIsos(self):
-        """Create isos from the various split directories."""
+        """Create isos of the tree, optionally splitting the tree for split media."""
 
 
         isolist=[]
@@ -377,6 +377,106 @@ cost=500
         ppcbootargs.append('-hfs-bless') # must be last
 
         sparcbootargs = ['-G', '/boot/isofs.b', '-B', '...', '-s', '/boot/silo.conf', '-sparc-label', '"sparc"']
+
+        # Check the size of the tree
+        # This size checking method may be bunk, accepting patches...
+        treesize = int(subprocess.Popen(mkisofs + ['-print-size', self.topdir], stdout=subprocess.PIPE).communicate()[0])
+        # Size returned is 2KiB clusters or some such.  This translates that to MiB.
+        treesize = treesize * 2048 / 1024 / 1024
+
+        cdsize = self.config.getfloat('default', 'cdsize')
+
+        # Do some math to figure out how many discs we'd need
+        if treesize < cdsize or self.config.has_option('default', 'nosplitmedia'):
+            self.config.set('default', 'discs', '1')
+        else:
+            discs = int(treesize / cdsize + 1)
+            self.config.set('default', 'discs', str(discs))
+            if self.config.get('default', 'arch') == 'source':
+                self.doSplitSRPMS()
+            else:
+                self.doPackageorder()
+                self.doSplittree()
+
+        if not self.config.get('default', 'arch') == 'source':
+            self.doCreateSplitrepo()
+
+        if treesize > 700: # we're larger than a 700meg CD
+            isoname = '%s-%s-%s-DVD.iso' % (self.config.get('default', 'iso_basename'), self.config.get('default', 'version'), 
+                self.config.get('default', 'arch'))
+        else:
+            isoname = '%s-%s-%s.iso' % (self.config.get('default', 'iso_basename'), self.config.get('default', 'version'), 
+                self.config.get('default', 'arch'))
+
+        isofile = os.path.join(self.isodir, isoname)
+
+        if not self.config.get('default', 'arch') == 'source':
+            # backup the main .discinfo to use a split one.  This is an ugly hack :/
+            content = open(discinfofile, 'r').readlines()
+            shutil.move(discinfofile, os.path.join(self.config.get('default', 'destdir'), 
+                '.discinfo-%s' % self.config.get('default', 'arch')))
+            content[content.index('ALL\n')] = ','.join([str(x) for x in range(1, self.config.getint('default', 'discs') + 1)]) + '\n'
+            open(discinfofile, 'w').writelines(content)
+
+            # move the main repodata out of the way to use the split repodata
+            shutil.move(os.path.join(self.topdir, 'repodata'), os.path.join(self.config.get('default', 'destdir'), 
+                'repodata-%s' % self.config.get('default', 'arch')))
+            shutil.copytree('%s-disc1/repodata' % self.topdir, os.path.join(self.topdir, 'repodata'))
+
+        # setup the extra mkisofs args
+        extraargs = []
+
+        if self.config.get('default', 'arch') == 'i386' or self.config.get('default', 'arch') == 'x86_64':
+            extraargs.extend(x86bootargs)
+        elif self.config.get('default', 'arch') == 'ia64':
+            extraargs.extend(ia64bootargs)
+        elif self.config.get('default', 'arch') == 'ppc':
+            extraargs.extend(ppcbootargs)
+            if self.config.getint('default', 'discs') == 1:
+                extraargs.append(os.path.join(self.topdir, "ppc/mac")) # this may work for both cases.. test
+            else:
+                extraargs.append(os.path.join('%s-disc%s' % (self.topdir, disc), "ppc/mac"))
+        elif self.config.get('default', 'arch') == 'sparc':
+            extraargs.extend(sparcbootargs)
+
+        extraargs.append('-V')
+        if treesize > 700:
+            extraargs.append('%s %s %s DVD' % (self.config.get('default', 'name'),
+                self.config.get('default', 'version'), self.config.get('default', 'arch')))
+        else:
+            extraargs.append('%s %s %s' % (self.config.get('default', 'name'),
+                self.config.get('default', 'version'), self.config.get('default', 'arch')))
+
+        extraargs.append('-o')
+        extraargs.append(isofile)
+        
+        if not self.config.get('default', 'arch') == 'source':
+            extraargs.append(self.topdir)
+        else:
+            extraargs.append(os.path.join(self.archdir, 'SRPMS'))
+
+        # run the command
+        pypungi._doRunCommand(mkisofs + extraargs, self.logger)
+
+        # implant md5 for mediacheck on all but source arches
+        if not self.config.get('default', 'arch') == 'source':
+            pypungi._doRunCommand(['/usr/lib/anaconda-runtime/implantisomd5', isofile], self.logger)
+
+        # shove the sha1sum into a file
+        sha1file = open(os.path.join(self.isodir, 'SHA1SUM'), 'a')
+        pypungi._doRunCommand(['/usr/bin/sha1sum', isoname], self.logger, rundir=self.isodir, output=sha1file)
+        sha1file.close()
+
+        # return the .discinfo file
+        if not self.config.get('default', 'arch') == 'source':
+            shutil.move(os.path.join(self.config.get('default', 'destdir'), '.discinfo-%s' % self.config.get('default', 'arch')), discinfofile)
+
+            shutil.rmtree(os.path.join(self.topdir, 'repodata')) # remove our copied repodata
+            shutil.move(os.path.join(self.config.get('default', 'destdir'), 
+                'repodata-%s' % self.config.get('default', 'arch')), os.path.join(self.topdir, 'repodata'))
+
+        # Write out a line describing the media
+        self.writeinfo('media: %s' % isofile)
 
         if self.config.getint('default', 'discs') > 1:
             for disc in range(1, self.config.getint('default', 'discs') + 1): # cycle through the CD isos
@@ -422,81 +522,7 @@ cost=500
                 isolist.append(self.mkrelative(isofile))
 
             # Write out a line describing the CD set
-            self.writeinfo('cdset: %s' % ' '.join(isolist))
-
-        isolist=[]
-        # We've asked for one or more discs, so make a DVD image
-        if self.config.getint('default', 'discs') >= 1:
-            isoname = '%s-%s-%s-DVD.iso' % (self.config.get('default', 'iso_basename'), self.config.get('default', 'version'), 
-                self.config.get('default', 'arch'))
-            isofile = os.path.join(self.isodir, isoname)
-
-            if not self.config.get('default', 'arch') == 'source':
-                # backup the main .discinfo to use a split one.  This is an ugly hack :/
-                content = open(discinfofile, 'r').readlines()
-                shutil.move(discinfofile, os.path.join(self.config.get('default', 'destdir'), 
-                    '.discinfo-%s' % self.config.get('default', 'arch')))
-                content[content.index('ALL\n')] = ','.join([str(x) for x in range(1, self.config.getint('default', 'discs') + 1)]) + '\n'
-                open(discinfofile, 'w').writelines(content)
-
-                # move the main repodata out of the way to use the split repodata
-                shutil.move(os.path.join(self.topdir, 'repodata'), os.path.join(self.config.get('default', 'destdir'), 
-                    'repodata-%s' % self.config.get('default', 'arch')))
-                shutil.copytree('%s-disc1/repodata' % self.topdir, os.path.join(self.topdir, 'repodata'))
-
-            # setup the extra mkisofs args
-            extraargs = []
-
-            if self.config.get('default', 'arch') == 'i386' or self.config.get('default', 'arch') == 'x86_64':
-                extraargs.extend(x86bootargs)
-            elif self.config.get('default', 'arch') == 'ia64':
-                extraargs.extend(ia64bootargs)
-            elif self.config.get('default', 'arch') == 'ppc':
-                extraargs.extend(ppcbootargs)
-                if self.config.getint('default', 'discs') == 1:
-                    extraargs.append(os.path.join(self.topdir, "ppc/mac")) # this may work for both cases.. test
-                else:
-                    extraargs.append(os.path.join('%s-disc%s' % (self.topdir, disc), "ppc/mac"))
-            elif self.config.get('default', 'arch') == 'sparc':
-                extraargs.extend(sparcbootargs)
-
-            extraargs.append('-V')
-            extraargs.append('%s %s %s DVD' % (self.config.get('default', 'name'),
-                self.config.get('default', 'version'), self.config.get('default', 'arch')))
-
-            extraargs.append('-o')
-            extraargs.append(isofile)
-            
-            if not self.config.get('default', 'arch') == 'source':
-                extraargs.append(self.topdir)
-            else:
-                extraargs.append(os.path.join(self.archdir, 'SRPMS'))
-
-            # run the command
-            pypungi._doRunCommand(mkisofs + extraargs, self.logger)
-
-            # implant md5 for mediacheck on all but source arches
-            if not self.config.get('default', 'arch') == 'source':
-                pypungi._doRunCommand(['/usr/lib/anaconda-runtime/implantisomd5', isofile], self.logger)
-
-            # shove the sha1sum into a file
-            sha1file = open(os.path.join(self.isodir, 'SHA1SUM'), 'a')
-            pypungi._doRunCommand(['/usr/bin/sha1sum', isoname], self.logger, rundir=self.isodir, output=sha1file)
-            sha1file.close()
-
-            # return the .discinfo file
-            if not self.config.get('default', 'arch') == 'source':
-                shutil.move(os.path.join(self.config.get('default', 'destdir'), '.discinfo-%s' % self.config.get('default', 'arch')), discinfofile)
-
-                shutil.rmtree(os.path.join(self.topdir, 'repodata')) # remove our copied repodata
-                shutil.move(os.path.join(self.config.get('default', 'destdir'), 
-                    'repodata-%s' % self.config.get('default', 'arch')), os.path.join(self.topdir, 'repodata'))
-
-            # keep track of the DVD images we've written 
-            isolist.append(self.mkrelative(isofile))
-
-        # Write out a line describing the DVD set
-        self.writeinfo('dvdset: %s' % ' '.join(isolist))
+            self.writeinfo('mediaset: %s' % ' '.join(isolist))
 
         # Now make rescue images
         if not self.config.get('default', 'arch') == 'source' and \
